--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,12 +2,11 @@ Package: minimap2
 Title: R Interface to Minimap2
 Version: 0.1.0
 Authors@R: 
-    person("Your", "Name", email = "your.email@example.com", role = c("aut", "cre"))
+    person("Shian", "Su", email = "su.s@wehi.edu.au", role = c("aut", "cre"))
 Description: R interface to Minimap2, a versatile sequence alignment program that can be used for short-read alignment, long-read alignment, and short-read assembly-to-reference alignment.
-License: MIT + file LICENSE
+License: Apache License (>= 2)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 LinkingTo: Rcpp
 Imports: Rcpp
-SystemRequirements: C++11 
